# git-toggle

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  README.rst  __pkginfo__.py  formate.toml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  api.rst  conf.py  contributing.rst  index.rst  license.rst  requirements.txt
doc-source/api/: git-toggle.rst
git_toggle/: __init__.py  __main__.py
tests/: conftest.py  test_cli.py  test_remote.py  test_toggler.py
tests/test_cli_/: test_help.txt  test_list_remotes.txt
