[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "git-toggle"
version = "0.1.1"
description = "Toggle Git remotes between https and ssh."
readme = "README.rst"
keywords = [ "git",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/git-toggle"
"Issue Tracker" = "https://github.com/domdfcoding/git-toggle/issues"
"Source Code" = "https://github.com/domdfcoding/git-toggle"
Documentation = "https://git-toggle.readthedocs.io/en/latest"

[project.scripts]
git-toggle = "git_toggle.__main__:main"
git_toggle = "git_toggle.__main__:main"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "git_toggle"
